# easy-msr-api

./: .env.example  .gitignore  API分类文档.md  Cargo.toml  README.md  test.json  test_font_resp.json  tree.txt
.github/workflows/: pub_to_crates_io.yml  release_and_pub.yml
examples/msr-api-hello-lib/: Cargo.toml
examples/msr-api-hello-lib/src/: main.rs
examples/msr-api-hello-swagger-ui/: Cargo.toml
examples/msr-api-hello-swagger-ui/src/: main.rs
src/: client.rs  config.rs  dto.rs  error.rs  lib.rs  web.rs
src/client/: mod.rs  remote.rs  tests.rs
src/web/: docs.rs  dto.rs  handler.rs  mod.rs
