[package]
name = "msr-api-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
