[package]
name = "easy-msr-api"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0"
description = "This is a library that provides Rust encapsulation for the MSR API, supporting direct API calls as well as optional Swagger UI documentation."
[features]
default = []
web = ["dep:utoipa-swagger-ui"]

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["web"]

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
dotenvy = "0.15.7"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
urlencoding = "2.1.3"
utoipa = "5.4.0" 
utoipa-swagger-ui = { version = "9.0.2", features = ["axum","vendored"], optional = true }

[dev-dependencies]
mockito = "1.6.1"
tokio = { version = "1.47.1", features = ["full", "test-util"] }
